--- a/index.html
+++ b/index.html
@@ -49,42 +49,40 @@
         <section class="specifics-section">
             <div class="container">
                 <h2 class="visually-hidden">Особености</h2>
-               <ul class="specifics-icon-list card-set">
-                   <li class="specifics-icon-item specifics-item">
-                       <svg class="specifics-icon">
-                           <use href="./images/icons/icons.svg#antenna"></use>
-                       </svg>
-                   </li>
-                   <li class="specifics-icon-item specifics-item">
-                       <svg class="specifics-icon">
-                           <use href="./images/icons/icons.svg#clock"></use>
-                       </svg>
-                   </li>
-                   <li class="specifics-icon-item specifics-item">
-                       <svg class="specifics-icon">
-                           <use href="./images/icons/icons.svg#diagram"></use>
-                       </svg>
-                   </li>
-                   <li class="specifics-icon-item specifics-item">
-                       <svg class="specifics-icon">
-                           <use href="./images/icons/icons.svg#astronaut"></use>
-                       </svg>
-                   </li>
-               </ul>
                 <ul class="list card-set">
                     <li class="specifics-item">
+                        <div class="specifics-block">
+                            <svg class="specifics-icon">
+                                <use href="./images/icons/icons.svg#antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="main-text-title">Внимание к деталям</h3>
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="specifics-item">
+                        <div class="specifics-block">
+                            <svg class="specifics-icon">
+                                <use href="./images/icons/icons.svg#clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="main-text-title">Пунктуальность</h3>
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="specifics-item">
+                        <div class="specifics-block">
+                            <svg class="specifics-icon">
+                                <use href="./images/icons/icons.svg#diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="main-text-title">Планирование</h3>
                         <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="specifics-item">
+                        <div class="specifics-block">
+                            <svg class="specifics-icon">
+                                <use href="./images/icons/icons.svg#astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="main-text-title">Современные технологии</h3>
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
